--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@graphql-codegen/import-types-preset": "^1.14.0",
     "@graphql-codegen/typescript-react-apollo": "^1.14.0",
     "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
