--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "generate": "graphql-codegen"
+    "generate": "graphql-codegen",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -47,6 +49,8 @@
   "devDependencies": {
     "@graphql-codegen/cli": "^1.17.8",
     "@graphql-codegen/typescript": "^1.14.0",
-    "@graphql-codegen/typescript-operations": "^1.14.0"
-  }
+    "@graphql-codegen/typescript-operations": "^1.14.0",
+    "gh-pages": "^3.1.0"
+  },
+  "homepage": "https://thyumo.github.io/my-kdrama-list/"
 }
